[gd_scene load_steps=3 format=2]

[ext_resource path="res://square_particle.gd" type="Script" id=1]
[ext_resource path="res://square_particle.png" type="Texture" id=2]

[node name="SquareParticle" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="ActualDestroyTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="ActualDestroyTimer" to="." method="_on_ActualDestroyTimer_timeout"]
